# DSPy-builder

./: .gitignore  README.md  bun.lockb  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/flow/[id]/: page.tsx
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  db.py  dspy_signature.py  dspy_streaming.py  models.py  node_runner.py  node_runner_stream.py  runner_core.py  schemas.py  utils.py
backend/data/: flows.db
backend/routes/: ai.py  flows.py  keys.py
components/: KeysManager.tsx  ThemeToggle.tsx  ToasterClient.tsx
components/code/: CodeEditor.tsx
components/common/: LiteralValuesEditor.tsx
components/flowbuilder/: CustomConnectionLine.tsx  FlowAssistant.tsx  FlowTracePanel.tsx  NodeInspector.tsx  Palette.tsx  Topbar.tsx  TypedNode.tsx  typeDisplay.tsx  types.ts
components/flowbuilder/sections/: index.ts
components/flowbuilder/sections/controls/: ControlGroupSection.tsx
components/flowbuilder/sections/ports/: PortListSection.tsx
components/flows/: FlowsDashboard.tsx
components/providers/: ThemeProvider.tsx
components/schema/: SchemaBrowser.tsx  SchemaCreator.tsx  SchemaFieldBuilder.tsx  SchemaSelector.tsx
components/ui/: accordion.tsx  slider.tsx
docs/: ARCHITECTURE.md
lib/: api.ts  demo-schemas.ts  flow-utils.ts  generate-dspy.ts  node-def.ts  python-identifier-utils.ts  schema-manager.ts  useFlowSchemas.ts
public/: Blackboard.json
