[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "dspy>=3.0.3",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = []
