[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "dspy>=3.0.3",
    "python-dotenv>=1.0",
    "exa-py>=1.15.4",
    "openai>=1.102.0",
    "google-generativeai>=0.7.2",
    "google-genai>=1.33.0",
]

[tool.uv]
dev-dependencies = []
